--- a/Aufgabe1-Dokumentation/Aufgabe1-Dokumentation.tex
+++ b/Aufgabe1-Dokumentation/Aufgabe1-Dokumentation.tex
@@ -10,7 +10,7 @@
 \usepackage{color}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{hyperref}
-\usepackage[top=2.5cm, bottom=1.5cm, left=2.5cm, right=2.5cm]{geometry}
+\usepackage[top=2cm, bottom=1.5cm, left=2.5cm, right=2.5cm]{geometry}
 \usepackage{fancyvrb}
 \usepackage{caption}
 \usepackage{mathtools}
@@ -22,6 +22,11 @@
 
 \usepackage{minted}
 \fvset{breaklines=true}
+
+\usepackage{fontspec}
+\usepackage{microtype}
+
+\usepackage{tikz}
 
 \pagestyle{fancy}
 \lhead{Lukas Rost, Teilnahme-ID: 48125}
@@ -123,7 +128,7 @@
  	\centering \includegraphics[scale=0.6]{pics/lee_figure1}
  	\caption{Illustration des Konzepts der \emph{Sweep line} (aus \cite{Src:pyvistwo})}
  \end{figure}
-Es lässt sich zeigen, dass sogar nur diejenige offene Kante geprüft werden muss, welche am nächsten an $v$ liegt, d.h. diejenige, für die der Schnittpunkt mit der Sweep line am nächsten an $v$ liegt. Um diese Kante schnell zu bestimmen, muss man die Kanten nach der Distanz zum Schnittpunkt ordnen. Dies lässt sich zum Beispiel mit einem balancierten binären Suchbaum wie einem \emph{AVL-Baum} erreichen.\cite{Src:pyvistwo} \\ \\
+Es lässt sich zeigen, dass sogar nur diejenige offene Kante geprüft werden muss, welche am nächsten an $v$ liegt, d.h. diejenige, für die der Schnittpunkt mit der Sweep line am nächsten an $v$ liegt. Um diese Kante schnell zu bestimmen, muss man die Kanten nach der Distanz zum Schnittpunkt ordnen. Dies lässt sich zum Beispiel mit einem balancierten binären Suchbaum wie einem \emph{AVL-Baum} erreichen.\footnote{Die Funktionsweise eines AVL-Baums sei hier als bekannt vorausgesetzt.}\cite{Src:pyvistwo} \\ \\
 Die \texttt{visible\_vertices}-Funktion sieht nun also bei einer Formulierung als Pseudocode ungefähr so aus:
 \begin{algorithm}[H]
 \begin{algorithmic}
@@ -193,7 +198,47 @@ Diese Funktion \texttt{visible} prüft dabei ganz einfach die Sichtbarkeit eines
  \end{enumerate}
 Der Dijkstra-Algorithmus hat eine Laufzeit von $\mathcal{O}((|V|+|E|) \cdot \log |V|)$ (bei Implementierung mit einer Vorrangwarteschlange). Da der Algorithmus den entsprechenden Weg durch das Setzen eines Vorgängers ebenfalls bestimmt, kann auch dieser selbst ausgegeben werden.
  \subsection{Lösung des Problems ohne Hindernisse}
+ Damit man nun diese spezielle Abwandlung des Problems lösen kann, sollte man zunächst einmal versuchen, das Problem ohne Hindernisse zu lösen, wie dies die Aufgabenstellung auch \emph{sehr} unauffällig nahelegt. \\ \\
+ Zunächst lässt sich feststellen, dass es ausschließlich sinnvoll ist, Punkte mit einer y-Koordinate $\geq$ der y-Koordinate von Lisas Haus als Zielpunkte zu wählen. Sonst würde der Abstand zwischen Start- und Zielpunkt größer, während die Abfahrtszeit des Busses früher läge, was insgesamt für Lisa ein früheres Aufstehen bedeuten würde. \\ \\
+\begin{wrapfigure}{r}{0.4\textwidth}
+	\begin{tikzpicture}
+		%TODO
+	\end{tikzpicture}
+\end{wrapfigure}
+ Betrachten wir nun die nebenstehende Situation, in der $P(x_p|y_p)$ Lisas Haus darstellt und $C(x_c|y_c)$ den optimalen Zielpunkt mit $y_c \geq y_p$. Die Zeit, die der Bus für die Strecke $b$ benötigt, berechnet sich mit $v_b$ als Geschwindigkeit des Busses zu
+ \begin{equation}
+ t_B = \frac{b}{v_B}
+ \end{equation}
+ Die Zeit, welche Lisa für die Strecke $l$ benötigt, berechnet sich äquivalent zu
+ \begin{equation}
+ t_L = \frac{l}{v_L} = \frac{\sqrt{x^2 + b^2}}{v_L}
+ \end{equation}
+ da das Dreieck rechtwinklig ist. Um nun den optimalen Punkt $C$ zu finden, ist es nötig, den Term $t_L - t_B$ abhängig von der Strecke $b$ zu minimieren. Dies lässt sich einfach mit dem aus der Kurvendiskussion bekannten Ansatz über die erste Ableitung erreichen. Dann ergibt sich:
+ \begin{equation}
+ \begin{split}
+ \frac{d (t_L - t_B)}{db} & =  \frac{d}{db} (\frac{\sqrt{x^2 + b^2}}{v_L} - \frac{b}{v_B}) \\
+ & = \frac{1}{v_L} \cdot \frac{2 \cdot b}{2 \cdot \sqrt{x^2 + b^2}} - \frac{1}{v_B} \\
+ & = \frac{1}{v_L} \cdot \frac{b}{\sqrt{x^2 + b^2}} - \frac{1}{v_B}
+ \end{split}
+ \end{equation}
+ Setzt man diese Ableitung nun gleich $0$, erhält man:
+ \begin{align}
+ \frac{1}{v_L} \cdot \frac{b}{\sqrt{x^2 + b^2}} - \frac{1}{v_B} &= 0 \\
+ \frac{1}{v_L} \cdot \frac{b}{\sqrt{x^2 + b^2}} &= \frac{1}{v_B} \\
+ b &= \frac{v_L}{v_B} \cdot \sqrt{x^2 + b^2} \\
+ b^2 &= \frac{v_L^2}{v_B^2} \cdot (x^2 + b^2) \\
+ (1 - \frac{v_L^2}{v_B^2}) \cdot b^2 &= \frac{v_L^2}{v_B^2} \cdot x^2 \\
+ b^2 &= \frac{v_L^2}{v_B^2} \cdot \frac{1}{(1 - \frac{v_L^2}{v_B^2})} \cdot x^2 \\
+ b &= \frac{v_L}{v_B} \cdot \frac{1}{\sqrt{1 - \frac{v_L^2}{v_B^2}}} \cdot x
+ \end{align}
+ Für den optimalen Zielpunkt $C$ gilt somit $x_c = 0$ und $y_c = y_p + \frac{v_L}{v_B} \cdot \frac{1}{\sqrt{1 - \frac{v_L^2}{v_B^2}}} \cdot x_p$. Setzt man die in der Aufgabenstellung gegebenen Geschwindigkeiten ein. ergibt sich: $y_c = y_p + \frac{\sqrt{3}}{3} \cdot x_p$
  \subsection{Kombination der Ansätze}
+ Um das Problem nun lösen zu können, muss man beide Ansätze (mit und ohne Hindernisse) kombinieren. Dazu bestimmt man zu jedem Knoten/Punkt $p$ in der Eingabe einen (von mir so bezeichneten) \textit{Companion}-Punkt $c$, indem man die im vorigen Abschnitt berechnete Gleichung auf diesen Punkt anwendet. Dieser Punkt $c$ ist dann der optimale Punkt, um von $p$ aus die y-Achse zu erreichen und dabei möglichst spät starten zu müssen. \\ \\
+ Da es jedoch sein kann, dass $c$ von $p$ nicht sichtbar ist (ein Hindernis liegt dazwischen), muss man eine Sichtbarkeitsprüfung durchführen. Dazu betrachtet man $c$ einfach bei der Erstellung des Sichtbarkeitsgraphen, genauer bei der Ermittlung der sichtbaren Punkte von $p$ aus (und nur dabei, denn für alle anderen Punkte hat $c$ keine Relevanz). \\ \\
+ Nun kann man mithilfe des Dijkstra-Algorithmus' die kürzesten Wege zu allen Companion-Knoten berechnen. Aus diesen und der Lage der Companion-Punkte (aus dieser bestimmt sich die Zeit, an der der Bus dort vorbeifährt) lässt sich dann für jeden Companion-Punkt die spätestmögliche Startzeit am Startpunkt $s$ bestimmen, wenn man an diesem Companion-Punkt auf den Bus treffen will. \\ \\
+ Der Companion-Punkt mit der spätesten spätestmöglichen Startzeit ist der Punkt, an dem Lisa auf den Bus treffen sollte, und der Weg zu ihm der optimale Weg.
+ %TODO Beweis: wenn keine Sichtbarkeit p und c dann irrelevant
+ %TODO Veranschaulichung
  \subsection{Laufzeitbetrachtung}
  %TODO ausführlich
  \subsection{Erweiterungen}
@@ -236,7 +281,7 @@ Der Dijkstra-Algorithmus hat eine Laufzeit von $\mathcal{O}((|V|+|E|) \cdot \log
 \end{algorithmic}
 \caption{Bestimmung der Minkowski-Summe}
 \end{algorithm}
-\hspace*{-1em}Dieser Algorithmus läuft offensichtlich in $\mathcal{O}(n + m)$, denn $i$ wird höchstens $n$ Mal inkrementiert und $j$ $m$ Mal. Da er $n_{Polygon}$ Mal\footnote{Anzahl der Polygone} ausgeführt wird, erhält man $\mathcal{O}(n_{Polygon} \cdot (n + m)) = \mathcal{O}(n_{Orig} + n_{Polygon} \cdot m)$, wobei $n_{Orig}$ das ursprüngliche $n$ als Anzahl aller Eckpunkte aller Polygone ist. Diese Erweiterung wurde \textbf{implementiert}.
+\hspace*{-1em}Dieser Algorithmus läuft offensichtlich in $\mathcal{O}(n + m)$, denn $i$ wird höchstens $n$ Mal inkrementiert und $j$ $m$ Mal. Da er $n_{Polygon}$ Mal\footnote{Anzahl der Polygone} ausgeführt wird, erhält man $\mathcal{O}(\sum_{1}^{n_{Polygon}} (n_i + m_i)) = \mathcal{O}(n_{Orig} + n_{Polygon} \cdot m)$, wobei $n_{Orig}$ das ursprüngliche $n$ als Anzahl aller Eckpunkte aller Polygone ist. Diese Erweiterung wurde \textbf{implementiert}.
  \subsubsection{Nicht-polygonale Hindernisse}
  Es wäre auch möglich, die Art der Hindernisse auf Flächen, die keine Polygone sind, zu erweitern. Dies könnten beispielsweise Ovale oder Kreise sein. Eine Möglichkeit, den Sichtbarkeitsgraph darauf zu erweitern, ist in \cite{Src:arcvis} beschrieben. Dabei muss man anstelle des klassischen Sichtbarkeitsgraphen einen Tangenten-Sichtbarkeitsgraphen verwenden. Da dies jedoch relativ kompliziert ist, wird an dieser Stelle nicht genauer darauf eingegangen. \\ \\
  Diese Erweiterung wurde \textbf{nicht implementiert}.
@@ -257,6 +302,7 @@ Der Dijkstra-Algorithmus hat eine Laufzeit von $\mathcal{O}((|V|+|E|) \cdot \log
 \end{thebibliography}
 
 \section{Umsetzung}
+%TODO Eingabegeschwindigkeiten km/h -> m/s
 \subsection{Allgemeine Hinweise zur Benutzung}
 \subsection{Struktur des Programms}
 \subsection{Implementierung der wichtigsten Algorithmen}
